k3s/ctfd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctfd
  namespace: ctfd
spec:
  selector:
    app: ctfd
  ports:
    - port: 8000
      targetPort: 8000
